unpackaged/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Copy_Fields_for_Current_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Copy_Fields_for_Current_Time_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the region, practice, group, or project records are updated with values from the backlog detail records directly, in addition to creating Backlog Calculation and Backlog Detail object records.</description>
    <inlineHelpText>Update the region, practice, group, or project records with values from the backlog detail records directly, in addition to creating Backlog Calculation and Backlog Detail object records.</inlineHelpText>
    <label>Copy Fields for Current Time Period</label>
    <type>Checkbox</type>
</CustomField>