unpackaged/main/default/objects/pse__Backlog_Calculation__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <inlineHelpText>The end date for backlog calculations. If no end date is specified, all records from the start date will be processed. This is recommended when calculating unscheduled backlog.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>