unpackaged/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Include_Sublevels__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_Sublevels__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When selected, the backlog calculation includes all sub-levels of the region, practice or group.</description>
    <inlineHelpText>Whether to calculate backlog for all sub levels of the selected region, practice, or group. This field is ignored if backlog is calculated only for a resource.</inlineHelpText>
    <label>Include Sublevels</label>
    <type>Checkbox</type>
</CustomField>