unpackaged/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Post_Process_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Post_Process_Batch_Id__c</fullName>
    <description>Internal PSE field - not intended for display.</description>
    <externalId>true</externalId>
    <label>Post Process Batch Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>