unpackaged/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not currently used.</description>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Backlog Calculations</relationshipLabel>
    <relationshipName>Backlog_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>