unpackaged/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Reuse_Detail_Objects__c.field-meta.xml
<CustomField>
    <fullName>pse__Reuse_Detail_Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, existing backlog detail records for the same regions, practices, groups, projects, and associated time periods are overwritten.</description>
    <inlineHelpText>Overwrite existing backlog detail records for the same regions, practices, groups, projects, and associated time periods. We recommend that you select this option to avoid using unnecessary space.</inlineHelpText>
    <label>Reuse Detail Objects</label>
    <type>Checkbox</type>
</CustomField>