unpackaged/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Start_Calculating_From__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Calculating_From__c</fullName>
    <inlineHelpText>Setting this value will set the start date field automatically</inlineHelpText>
    <label>Start Calculating From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start of this week</fullName>
            </value>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>Start of next week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>