unpackaged/main/default/objects/pse__Backlog_Calculation__c/validationRules/pse__check_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__check_end_date</fullName>
    <active>true</active>
    <description>End date cannot occur before start date</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__End_Date__c)),pse__End_Date__c &lt; pse__Start_Date__c)</errorConditionFormula>
    <errorDisplayField>pse__End_Date__c</errorDisplayField>
    <errorMessage>End date cannot occur before start date</errorMessage>
</ValidationRule>