unpackaged/main/default/objects/pse__Backlog_Calculation__c/validationRules/pse__only_one_source_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__only_one_source_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(LEN(pse__Region__c)&gt;0, 
    OR(LEN(pse__Practice__c)&gt;0,LEN(pse__Group__c)&gt;0,LEN(pse__Project__c)&gt;0) ),
  AND(LEN(pse__Practice__c)&gt;0, 
    OR(LEN(pse__Region__c)&gt;0,LEN(pse__Group__c)&gt;0,LEN(pse__Project__c)&gt;0) ),
  AND(LEN(pse__Group__c)&gt;0, 
    OR(LEN(pse__Region__c)&gt;0,LEN(pse__Practice__c)&gt;0,LEN(pse__Project__c)&gt;0) ),
  AND(LEN(pse__Project__c)&gt;0, 
    OR(LEN(pse__Region__c)&gt;0,LEN(pse__Group__c)&gt;0,LEN(pse__Group__c)&gt;0) )
)</errorConditionFormula>
    <errorMessage>Only one of Region, Practice, Group, or Project may be specified.</errorMessage>
</ValidationRule>