unpackaged/main/default/objects/pse__Backlog_Calculation__c/validationRules/pse__source_required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__source_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(pse__Region__c), ISBLANK(pse__Practice__c), ISBLANK(pse__Group__c), ISBLANK(pse__Project__c))</errorConditionFormula>
    <errorMessage>One of Region, Practice, Group, or Project is required</errorMessage>
</ValidationRule>