unpackaged/main/default/objects/pse__Backlog_Calculation__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>